# simple_RAG_sapsan

./: .env.example  Dockerfile  compose.yml  hello.py  pyproject.toml
app/: main.py  rag.py  schemas.py
files/: ADC_8.docx
files/vectors/: raft_state.json
scripts/: clean_text.py
